# evogames

./: .env.Z  .gitignore  .replit  README.md  app.py  config_service.py  docker-compose.yml  main.py  models.py  pyproject.toml  routes.py  run.bat  run.sh  setup_db.py  simulation.py  social_dilemmas.py  utils.py
config/: strategy_descriptions.yaml
docs/: CONFIG.md  configuration-service.md
static/css/: custom.css
static/js/: advanced-charts-standalone.js  chart-config.js  main.js  simulation-controller.js  simulation-results.js  social-dilemmas.js
templates/: about.html  advanced_charts.html  game_theory_simulation_view.html  index.html  layout.html  real_world_examples.html  simulation_history.html  simulation_view.html  social_dilemmas.html
tests/: run_tests.py  test_config_service.py  test_routes_integration.py  test_social_dilemmas.py
